--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -8,7 +8,7 @@ body {
     
     .mainContainer {
         min-height: 100vh;
-        width: 100%;
+        width: calc(100% - 3rem);
         max-width: 650px;
         padding: 6rem 1.5rem;
     }
